# climbing-analysis-toolbox

./: .pre-commit-config.yaml  BUILD.md  CONTRIBUTE.md  README.md  pyproject.toml  requirements.txt  warp_image.py
.github/workflows/: publish.yml
examples/scripts/: batch_body.sh  batch_warp.sh  body_trajectory_demo.py  segment_pose_demo.py  warp_image.py  warp_image_demo.py  warp_video_demo.py
scripts/: check_version_ahead.py  generate_release_notes.py
src/cruxes/: __init__.py  cli.py
src/cruxes/utils/: body_trajectory.py  draw_helpers.py  file_operations.py  pose_backend.py  pose_helpers.py
