[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cruxes"
version = "0.1.21"
description = "A set of computer vision tools for analyzing your climbing videos."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Tommy Liu", email = "i@tjtl.io"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "termcolor==3.3.0",
  "opencv-python==4.13.0.92",
  "numpy==2.4.2",
  "mediapipe==0.10.32",
  "scipy==1.17.1",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "torchvision==0.25.0",
  "image-matching-models==1.1.0",
]

[project.urls]
"Homepage" = "https://github.com/tommyjtl/climbing-analysis-toolbox"

[project.scripts]
cruxes = "cruxes.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cruxes*"]
namespaces = true
